--- a/.github/workflows/promote-shared.yml
+++ b/.github/workflows/promote-shared.yml
@@ -1,4 +1,4 @@
-name: Promote (Shared Workflow)
+name: Promote (Manual Test)
 
 # MIGRATION: Using shared promotion workflow from bookverse-demo-init
 # This replaces the 378-line custom promotion workflow with shared, standardized logic
@@ -27,7 +27,7 @@ jobs:
   # =================================================================
   promote:
     name: "Promote to ${{ inputs.target_stage }}"
-    uses: yonatanp-jfrog/bookverse-demo-init/.github/workflows/promote.reusable.yml@main
+    uses: yonatanp-jfrog/bookverse-infra/.github/workflows/promote.reusable.yml@main
     with:
       target_stage: ${{ inputs.target_stage }}
       application_version: ${{ inputs.application_version }}
