--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,10 @@ jobs:
           # Use shared bookverse-devops commit analysis script
           echo "🔗 Using shared commit analysis script from bookverse-devops"
           echo "📂 Current directory: $(pwd)"
+          echo "📁 Contents of bookverse-infra: $(ls -la bookverse-infra/ 2>/dev/null || echo 'bookverse-infra directory not found')"
+          echo "📁 Contents of libraries: $(ls -la bookverse-infra/libraries/ 2>/dev/null || echo 'libraries directory not found')"
+          echo "📁 Contents of bookverse-devops: $(ls -la bookverse-infra/libraries/bookverse-devops/ 2>/dev/null || echo 'bookverse-devops directory not found')"
+          echo "📁 Contents of scripts: $(ls -la bookverse-infra/libraries/bookverse-devops/scripts/ 2>/dev/null || echo 'scripts directory not found')"
           echo "📁 Checking if script exists: $(ls -la bookverse-infra/libraries/bookverse-devops/scripts/analyze-commit.sh 2>/dev/null || echo 'NOT FOUND')"
           echo "🔧 Making script executable..."
           chmod +x bookverse-infra/libraries/bookverse-devops/scripts/analyze-commit.sh
