fix: Use jf pip install for bookverse-core with build-info tracking
- Changed from 'pip install' to 'jf pip install' for bookverse-core installation
- Regular pip doesn't support --build-name and --build-number options
- Only JFrog CLI pip supports build-info tracking parameters
- Fixes 'no such option: --build-name' error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -270,7 +270,7 @@ jobs:
           echo "📦 Installing bookverse-core and dependencies..."
           # Install bookverse-core first (includes standardized dependencies)
           if [ -d "libs/bookverse-core" ]; then
-            pip install -e ./libs/bookverse-core --build-name="$BUILD_NAME" --build-number="$BUILD_NUMBER"
+            jf pip install -e ./libs/bookverse-core --build-name="$BUILD_NAME" --build-number="$BUILD_NUMBER"
             echo "✅ Installed local bookverse-core"
           fi
           
