--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -268,6 +268,11 @@ jobs:
         run: |
           
           echo "📦 Installing bookverse-core and dependencies..."
+          
+          # Install build dependencies first to avoid setuptools issues
+          jf pip install setuptools wheel --build-name="$BUILD_NAME" --build-number="$BUILD_NUMBER"
+          echo "✅ Installed build dependencies"
+          
           # Install bookverse-core first (includes standardized dependencies)
           if [ -d "libs/bookverse-core" ]; then
             jf pip install -e ./libs/bookverse-core --build-name="$BUILD_NAME" --build-number="$BUILD_NUMBER"
