fix: Add missing sub-dependencies for pydantic and fastapi
- Added pydantic-core, starlette, typing-extensions, annotated-types
- Resolves ModuleNotFoundError for pydantic_core and starlette
- Uses --no-deps approach to avoid dependency resolution issues
- Future enhancement: pre-populate these in JFrog PyPI repo during demo setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -280,7 +280,11 @@ jobs:
             fastapi \
             uvicorn \
             pydantic \
-            requests
+            pydantic-core \
+            starlette \
+            requests \
+            typing-extensions \
+            annotated-types
           
           # Add bookverse-core to Python path instead of installing in editable mode
           if [ -d "libs/bookverse-core" ]; then
