fix: Add bookverse-core to PYTHONPATH for test imports
- Added bookverse-core to PYTHONPATH using GITHUB_ENV for persistence
- Resolves ModuleNotFoundError: No module named 'bookverse_core'
- Tests can now import from bookverse_core.utils.validation and other modules
- Should finally achieve 0-issue workflow run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -286,6 +286,12 @@ jobs:
           
           echo "✅ Installed dependencies from pre-populated JFrog repository"
           
+          # Add bookverse-core to Python path for imports
+          if [ -d "libs/bookverse-core" ]; then
+            echo "PYTHONPATH=$PWD/libs/bookverse-core:$PYTHONPATH" >> $GITHUB_ENV
+            echo "✅ Added bookverse-core to Python path"
+          fi
+          
           echo "✅ Dependencies installed using bookverse-core patterns"
 
       - name: "[Test] Run with coverage (Optimized with bookverse-core)"
