fix: Add missing bookverse-core dependencies (python-jose, python-multipart, PyYAML)
- Added python-jose for JWT authentication (resolves 'jose' import error)
- Added python-multipart for form parsing
- Added PyYAML for configuration handling
- These are required by bookverse-core library
- Should resolve remaining import errors and achieve 0-issue run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -282,7 +282,10 @@ jobs:
             requests==2.31.0 \
             starlette==0.37.2 \
             pydantic==2.11.9 \
-            typing-extensions==4.15.0
+            typing-extensions==4.15.0 \
+            python-jose \
+            python-multipart \
+            PyYAML
           
           echo "✅ Installed dependencies from pre-populated JFrog repository"
           
