--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -491,12 +491,17 @@ jobs:
           echo "📋 Docker images to add to build-info:"
           cat images.txt
           
-          # Create build-info with all Docker images
-          jf rt build-docker-create "$REPO_KEY" \
-            --image-file images.txt \
-            --build-name "$BUILD_NAME" \
-            --build-number "$BUILD_NUMBER" \
-            --project "${{ vars.PROJECT_KEY }}"
+          # Add Docker images to build-info one by one (JFrog CLI expects individual calls)
+          while IFS= read -r image_line; do
+            if [[ -n "$image_line" ]]; then
+              echo "📦 Adding image to build-info: $image_line"
+              jf rt build-docker-create "$REPO_KEY" \
+                --image "$image_line" \
+                --build-name "$BUILD_NAME" \
+                --build-number "$BUILD_NUMBER" \
+                --project "${{ vars.PROJECT_KEY }}"
+            fi
+          done < images.txt
           
           
           jf rt bag --project "${{ vars.PROJECT_KEY }}" "$BUILD_NAME" "$BUILD_NUMBER"
