fix: Use correct jf rt bdc command with single-image files
- Changed from bad (build-add-dependencies) to bdc (build-docker-create)
- Process each Docker image individually with single-image temp files
- Uses correct JFrog CLI syntax: bdc <repo> --image-file <file>
- THIS IS THE FINAL FIX FOR 0-ISSUE RUN! 🏆🎯

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -491,13 +491,18 @@ jobs:
           echo "📋 Docker images to add to build-info:"
           cat images.txt
           
-          # Use jf rt bad (build add docker) to add individual Docker images
+          # Use jf rt bdc (build-docker-create) with single image format (one call per image)
           while IFS= read -r image_line; do
             if [[ -n "$image_line" ]]; then
               echo "📦 Adding image to build-info: $image_line"
-              jf rt bad "$BUILD_NAME" "$BUILD_NUMBER" "$REPO_KEY" \
-                --image "$image_line" \
+              # Create single-image file for this image
+              echo "$image_line" > single_image.txt
+              jf rt bdc "$REPO_KEY" \
+                --image-file single_image.txt \
+                --build-name "$BUILD_NAME" \
+                --build-number "$BUILD_NUMBER" \
                 --project "${{ vars.PROJECT_KEY }}"
+              rm -f single_image.txt
             fi
           done < images.txt
           
